# RI-box

./: .gitignore  Cargo.toml
loop-helper/: Cargo.toml
replace-in-file/: Cargo.toml  replace_in_file_tool_instructions.md
replace-in-file/src/: lib.rs  lib_v1.rs
replace-in-file/tests/: diff_edge_cases2_test.rs  diff_edge_cases_test.rs  diff_test.rs  integration_test.rs  v1_diff_test.rs  v1_more_parity_test.rs  v1_parity_test.rs
